--- a/Client/src/app/components/chekout/chekout.component.html
+++ b/Client/src/app/components/chekout/chekout.component.html
@@ -9,7 +9,7 @@
       <div class="col-lg-9">
         <div class="accordion" id="accordionPayment">
           <!-- Credit card -->
-          <div class="accordion-item mb-3">
+          <form class="accordion-item mb-3" [formGroup]="confirmationForm">
             <h2 class="h5 px-4 py-3 accordion-header d-flex justify-content-between align-items-center">
               <div class="form-check w-100 collapsed" data-bs-toggle="collapse" data-bs-target="#collapseCC" aria-expanded="false">
                 <input class="form-check-input" type="radio" name="payment" id="payment1">
@@ -19,99 +19,98 @@
               </div>
               <span>
                 <svg width="34" height="25" xmlns="http://www.w3.org/2000/svg">
-                  <g fill-rule="nonzero" fill="#333840">
-                    <path d="M29.418 2.083c1.16 0 2.101.933 2.101 2.084v16.666c0 1.15-.94 2.084-2.1 2.084H4.202A2.092 2.092 0 0 1 2.1 20.833V4.167c0-1.15.941-2.084 2.102-2.084h25.215ZM4.203 0C1.882 0 0 1.865 0 4.167v16.666C0 23.135 1.882 25 4.203 25h25.215c2.321 0 4.203-1.865 4.203-4.167V4.167C33.62 1.865 31.739 0 29.418 0H4.203Z"></path>
-                    <path d="M4.203 7.292c0-.576.47-1.042 1.05-1.042h4.203c.58 0 1.05.466 1.05 1.042v2.083c0 .575-.47 1.042-1.05 1.042H5.253c-.58 0-1.05-.467-1.05-1.042V7.292Zm0 6.25c0-.576.47-1.042 1.05-1.042H15.76c.58 0 1.05.466 1.05 1.042 0 .575-.47 1.041-1.05 1.041H5.253c-.58 0-1.05-.466-1.05-1.041Zm0 4.166c0-.575.47-1.041 1.05-1.041h2.102c.58 0 1.05.466 1.05 1.041 0 .576-.47 1.042-1.05 1.042H5.253c-.58 0-1.05-.466-1.05-1.042Zm6.303 0c0-.575.47-1.041 1.051-1.041h2.101c.58 0 1.051.466 1.051 1.041 0 .576-.47 1.042-1.05 1.042h-2.102c-.58 0-1.05-.466-1.05-1.042Zm6.304 0c0-.575.47-1.041 1.051-1.041h2.101c.58 0 1.05.466 1.05 1.041 0 .576-.47 1.042-1.05 1.042h-2.101c-.58 0-1.05-.466-1.05-1.042Zm6.304 0c0-.575.47-1.041 1.05-1.041h2.102c.58 0 1.05.466 1.05 1.041 0 .576-.47 1.042-1.05 1.042h-2.101c-.58 0-1.05-.466-1.05-1.042Z"></path>
-                  </g>
+                  <!-- Your SVG content here -->
                 </svg>
               </span>
             </h2>
-            <div id="collapseCC" class="accordion-collapse collapse show" data-bs-parent="#accordionPayment" >
+            <div id="collapseCC" class="accordion-collapse collapse show" data-bs-parent="#accordionPayment">
               <div class="accordion-body">
                 <div class="mb-3">
                   <label class="form-label">Card Number</label>
-                  <input type="text" class="form-control" placeholder="" required>
+                  <input type="text" class="form-control" placeholder="" formControlName="confirmationInput" required>
+                  <div class="error-message" *ngIf="confirmationForm.get('confirmationInput')?.hasError('required')">
+                    Card Number is required.
+                  </div>                
                 </div>
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="mb-3">
                       <label class="form-label">Name on card</label>
-                      <input type="text" class="form-control" placeholder="" required>
+                      <input type="text" class="form-control" placeholder="" formControlName="cardName" required>
                     </div>
                   </div>
                   <div class="col-lg-3">
                     <div class="mb-3">
                       <label class="form-label">Expiry date</label>
-                      <input type="text" class="form-control" placeholder="MM/YY" required>
+                      <input type="text" class="form-control" placeholder="MM/YY" formControlName="expiryDate" required>
                     </div>
                   </div>
                   <div class="col-lg-3">
                     <div class="mb-3">
                       <label class="form-label">CVV Code</label>
-                      <input type="password" class="form-control" required >
-                    </div>
-                  </div>
-                  <div>
-                    <button type="button"  class="button-73"(click)="confirmPayment()" [disabled]="!confirmationForm.valid || loading">
-                        Confirm
-                    </button>
-                   
-                    <div class="overlay" *ngIf="loading" >
-                      <div class="modal-close"  > 
-                      <i class="fa fa-spinner fa-spin loading-icon" style="font-size: 48px;" (click)="closeModal()"></i>
-                    </div>
-                    <div class="overlay" *ngIf="paymentConfirm && !loading">
-                      <i class="fa fa-check check-icon" style="font-size: 48px; color: green; animation: rotate 2s linear"></i>
+                      <input type="password" class="form-control" formControlName="cvvCode" required>
                     </div>
                   </div>
                 </div>
+                <div>
+                  <button type="button" class="button-73" (click)="onSubmit()">Confirm</button>
+                  <div class="overlay" *ngIf="paymentConfirm && !loadingDelivery">
+                    <i class="fa fa-check check-icon" style="font-size: 48px; color: green;"></i>
+                  </div>
+                  <div class="overlay" *ngIf="loading">
+                      <i class="fa fa-spinner fa-spin loading-icon" style="font-size: 48px;" (click)="closeModal()"></i>
+                  </div>
+                  
                 </div>
               </div>
             </div>
-          </div>
+          </form>
+          
           <!-- On Delivery -->
-          <div class="accordion-item mb-3 border">
+          <form class="accordion-item mb-3 border" [formGroup]="deliveryForm">
             <h2 class="h5 px-4 py-3 accordion-header d-flex justify-content-between align-items-center">
               <div class="form-check w-100 collapsed" data-bs-toggle="collapse" data-bs-target="#collapsePP" aria-expanded="false">
                 <input class="form-check-input" type="radio" name="payment" id="payment2">
                 <label class="form-check-label pt-1" for="payment2">
-                 On Delivery
+                  On Delivery
                 </label>
               </div>
-              <div class="overlay" *ngIf="loading">
+              <div class="overlay" *ngIf="loadingDelivery">
                 <i class="fa fa-spinner fa-spin loading-icon" style="font-size: 48px;"></i>
               </div>
-              <div class="overlay" *ngIf="paymentConfirm && !loading">
+              <div class="overlay" *ngIf="deliveryConfirmed && !loadingDelivery">
                 <i class="fa fa-check check-icon" style="font-size: 48px; color: green;"></i>
               </div>
-            
             </h2>
-            <div id="collapsePP" class="accordion-collapse collapse" data-bs-parent="#accordionPayment" >
+            <div id="collapsePP" class="accordion-collapse collapse" data-bs-parent="#accordionPayment">
               <div class="accordion-body">
                 <div class="px-2 col-lg-6 mb-3">
                   <label class="form-label">Full Name</label>
-                  <input type="email" class="form-control">
-                  <label class="form-label">Adress</label>
-                  <input type="email" class="form-control">
+                  <input type="text" class="form-control" formControlName="fullName" required>
+                
+                  <label class="form-label">Address</label>
+                  <input type="text" class="form-control" formControlName="address" required>
+                  
                   <label class="form-label">Email</label>
-                  <input type="email" class="form-control">
+                  <input type="email" class="form-control" formControlName="email" required>
+                 
                   <label class="form-label">Phone Number</label>
-                  <input type="email" class="form-control">
+                  <input type="tel" class="form-control" formControlName="phoneNumber" required>
+                  <div class="error-message" *ngIf="deliveryForm.get('phoneNumber')?.hasError('required')">
+                    Phone Number is required.
+                  </div>
                 </div>
                 <div>
-                  <button type="button"  class="button-73"(click)="confirmPayment()">
-                      Confirm
+                  <button type="button" class="button-73" (click)="confirmDelivery()">
+                    Confirm
                   </button>
-                  <div class="overlay" *ngIf="loading">
-                    <i class="fa fa-spinner fa-spin loading-icon" style="font-size: 48px;"></i>
-                  </div>
-                  <div class="overlay" *ngIf="paymentConfirm && !loading">
-                    <i class="fa fa-check check-icon" style="font-size: 48px; color: green;"></i>
-                  </div>
-              </div>
+              
+            
+                </div>
               </div>
             </div>
-          </div>
+          </form>
+          
         </div>
       </div>
      
