delete all dialog

--- a/Client/src/app/components/cart/cart.component.html
+++ b/Client/src/app/components/cart/cart.component.html
@@ -12,7 +12,7 @@
                     <th class="text-center">Unit Price </th>
                    
                     <th class="text-center">
-                        <button (click)="removeAllFromCart()" class="btn btn-sm btn-outline-danger" >Clear Cart
+                        <button (click)="openDeleteAllConfirmation()" class="btn btn-sm btn-outline-danger" >Clear Cart
                         </button>
                     </th>
                 </tr>
