--- a/Client/src/app/components/home-page/home-page.component.html
+++ b/Client/src/app/components/home-page/home-page.component.html
@@ -9,7 +9,7 @@
 <div class="row pb-3">
   <app-cards [selectedCategory]="selectedCategory" [searchTerm]="searchTerm" (onAddToCart)=" onProductSelected()"></app-cards>
 
-    (searchQuery)="onSearch($event)"></app-navigation-bar>
+    (searchQuery)="onSearch($event)">
 
 </div>
 
