--- a/Client/src/app/admin-components/users-list/users-list.component.html
+++ b/Client/src/app/admin-components/users-list/users-list.component.html
@@ -1,3 +1,4 @@
+<app-admin-navigation-bar></app-admin-navigation-bar>
 <div class="container">
     <div class="row">
         <div class="col-12 mb-3 mb-lg-5">
