--- a/Client/src/app/components/home-page/home-page.component.html
+++ b/Client/src/app/components/home-page/home-page.component.html
@@ -6,10 +6,10 @@
     <span class="premium text-primary">Premium</span> Pet Products
   </h1>
 </div>
-<div class="row pb-3">
+<div class="" >
   <app-cards [selectedCategory]="selectedCategory" [searchTerm]="searchTerm" (onAddToCart)=" onProductSelected()"></app-cards>
 
-    (searchQuery)="onSearch($event)">
+    >
 
 </div>
 
