--- a/Client/src/app/admin-components/products-list/products-list.component.html
+++ b/Client/src/app/admin-components/products-list/products-list.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+<app-admin-navigation-bar></app-admin-navigation-bar>
 <div class="container">
     <button class="button-35" role="button" style="margin-top: 6rem; margin-left: 1rem;" (click)="openModal()">Add
         products +</button>
