--- a/Client/src/app/components/home-page/home-page.component.html
+++ b/Client/src/app/components/home-page/home-page.component.html
@@ -6,7 +6,7 @@
   </h1>
 </div>
 
-<div class="row pb-3">
+<div class= "pb-3">
   <app-cards [selectedCategory]="selectedCategory" [searchTerm]="searchTerm"
     (onAddToCart)=" onProductSelected()"></app-cards>
 </div>
