--- a/Client/src/app/admin-components/admin-navigation-bar/admin-navigation-bar.component.html
+++ b/Client/src/app/admin-components/admin-navigation-bar/admin-navigation-bar.component.html
@@ -2,8 +2,8 @@
 
 <nav class="navbar navbar-expand-lg navbar-custom">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <i class="fa fa-paw" aria-hidden="true" routerLink="/admin-home" ></i> Pet-Store-Admin
+        <a class="navbar-brand"  (click)="logo()" style="cursor: pointer;">
+            <i class="fa fa-paw" aria-hidden="true"  ></i> Pet-Store-Admin
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
