--- a/Client/src/app/admin-components/update-product/update-product.component.html
+++ b/Client/src/app/admin-components/update-product/update-product.component.html
@@ -45,8 +45,8 @@
             </form>
         </div>
         <div class="modal-footer">
-            <button class="btn btn-lg btn-primary px-3" (click)="cancelUpdate()">CANCEL</button>
-            <button class="btn btn-lg btn-primary px-3" (click)="updateProduct()">UPDATE</button>
+            <button class="btn btn-secondary" (click)="cancelUpdate()">Cancel</button>
+            <button class="btn btn-primary" (click)="updateProduct()">Update</button>
         </div>
     </div>
 </div>
