--- a/Client/src/app/components/home-page/home-page.component.html
+++ b/Client/src/app/components/home-page/home-page.component.html
@@ -9,5 +9,5 @@
   <app-cards [selectedCategory]="selectedCategory" [searchTerm]="searchTerm" (onAddToCart)=" onProductSelected()"></app-cards>
 
     >
-
+<app-footer></app-footer>
 </div>
