--- a/Client/src/app/components/login/login.component.html
+++ b/Client/src/app/components/login/login.component.html
@@ -10,7 +10,7 @@
                                     <h3 class="h4 font-weight-bold text-theme"><i class="fa fa-paw" aria-hidden="true"></i>Login</h3>
                                 </div>
 
-                                <h6 class="h5 mb-0">Welcome back!</h6>
+                                <h6 class="wel">Welcome back!</h6>
                                 <p class="text-muted mt-2 mb-5">Enter your email address and password to access our website.</p>
 
                                 <form (submit)="onSubmit()">
