--- a/Client/src/app/components/navigation-bar/navigation-bar.component.css
+++ b/Client/src/app/components/navigation-bar/navigation-bar.component.css
@@ -1,5 +1,5 @@
 .navbar-custom {
-    background-color: #5369F8;
+    background-color: #232A34;
     height: 80px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
   }
@@ -55,11 +55,11 @@
     position: absolute;
     top: -8px;
     right: -8px;
-    background-color: rgba(255, 72, 0, 0.952);
+    background-color: rgba(0, 0, 0, 0.952);
     color: white;
     border-radius: 50%;
     padding: 4px 8px;
-    font-size: 12px;
+    font-size: 9px;
   }
   
 
@@ -84,7 +84,7 @@
  
 }
 #exampleFormControlInput1{
-  background-color: #5369F8
+  background-color: #232A34
 }
 .form-group {
   display: flex;
@@ -104,3 +104,7 @@
 
 }
 
+#exampleFormControlInput1::placeholder {
+  color: white; 
+  font-weight: 100/* Set the placeholder text color to white */
+}
