--- a/Client/src/app/components/signup/signup.component.html
+++ b/Client/src/app/components/signup/signup.component.html
@@ -10,7 +10,7 @@
                                     <h3 class="h4 font-weight-bold text-theme"><i class="fa fa-paw" aria-hidden="true"></i> Signup</h3>
                                 </div>
 
-                                <h6 class="h5 mb-0">Create an account!</h6>
+                                <h6 class="wel">Create an account!</h6>
                                 <p class="text-muted mt-2 mb-4">Enter your details below to create an account and access our website.</p>
 
                                 <form (submit)="onSubmit()" [formGroup]="signupForm" novalidate>
